--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "coffeecord",
+  "name": "coffeescord",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "@skynexui/components": "^1.23.3",
+    "@supabase/supabase-js": "^1.29.4",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
